
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int exit (int ) ;
 int printf (char*) ;
 int smap_smep_enabled () ;

void check_smep_smap() {
 int rv = smap_smep_enabled();
 if (rv >= 2) {
  printf("[-] SMAP detected, no bypass available\n");
  exit(EXIT_FAILURE);
 }

 if (rv >= 1) {
  printf("[-] SMEP detected, use ENABLE_SMEP_BYPASS\n");
  exit(EXIT_FAILURE);
 }

}
