; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43418.c_check_smep_smap.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43418.c_check_smep_smap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [40 x i8] c"[-] SMAP detected, no bypass available\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [43 x i8] c"[-] SMEP detected, use ENABLE_SMEP_BYPASS\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_smep_smap() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @smap_smep_enabled()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp sge i32 %3, 2
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = call i32 @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* @EXIT_FAILURE, align 4
  %8 = call i32 @exit(i32 %7) #3
  unreachable

9:                                                ; preds = %0
  %10 = load i32, i32* %1, align 4
  %11 = icmp sge i32 %10, 1
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = call i32 @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i32, i32* @EXIT_FAILURE, align 4
  %15 = call i32 @exit(i32 %14) #3
  unreachable

16:                                               ; preds = %9
  ret void
}

declare dso_local i32 @smap_smep_enabled(...) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
